k8s/speedis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: speedis
  name: speedis
  labels:
    app: speedis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedis
  template:
    metadata:
      labels:
        app: speedis
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: speedis
        image: mjguisado/speedis
        ports:
        - containerPort: 3001
        - containerPort: 3003
        volumeMounts:
        - name: speedis-config 
          mountPath: /usr/src/app/conf/speedis.json
          subPath: speedis.json
        - name: speedis-origins
          mountPath: /usr/src/app/conf/origins
      volumes:
      - name: speedis-config
        configMap:
          name: speedis-config
      - name: speedis-origins
        configMap:
          name: speedis-origins
