k8s/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: speedis
  name: haproxy
spec:
  selector:
    app: haproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
    - protocol: TCP
      port: 8404
      targetPort: 8404
      name: stats
    - protocol: TCP
      port: 8405
      targetPort: 8405
      name: metrics
  type: ClusterIP
