k8s/mocks-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: speedis
  name: mocks
spec:
  selector:
    app: mocks
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
      name: http
  type: ClusterIP
