k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: speedis
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
    - port: 8001
      targetPort: 8001
      name: redis-ui
  selector:
    app: redis
  type: ClusterIP
