k8s/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: speedis
  name: haproxy-ingress
  annotations:
    haproxy.org/path-rewrite: (.*) /cache\1
    haproxy.org/ssl-redirect: "false"  
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
      - mocks.localhost
    secretName: mocks-tls-secret  
  rules:
    - host: mocks.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedis
                port:
                  number: 3001
